personal-website/src/components/Experience/ExperienceTree/ExperienceTree.css
.experience-tree {
    --list-indent: 1.5rem;
    --experience-arrow-duration: 0.2s;
    --experience-content-duration: 0.3s;
    padding-left: var(--list-indent);
}

.experience-tree.top-level {
    gap: 1rem;
    list-style: none;
    padding-left: 0;
    margin: 0;
}


.experience-folder-wrapper {
    margin-left: calc(-1 * var(--list-indent));
    border: 1px solid #333;
    border-radius: 12px;

    padding: 1rem;
    list-style: none;

}


.experience-folder-wrapper.top-level {
    margin-bottom: 1rem;
    margin-left: 0;
}

.experience-item-wrapper {

    padding: 1rem;

}

.experience-item-wrapper.top-level {
    border: 1px solid #333;
    border-radius: 12px;
    margin-bottom: 1rem;

}

.experience-item-wrapper:not(.top-level)::marker {
    color: #999;
    font-size: 0.9rem;
    content: "● ";
}

